--- a/app/views/aboutus/index.scala.html
+++ b/app/views/aboutus/index.scala.html
@@ -3,7 +3,22 @@
 
     <div class="container-fluid maincontent-container">
         <div class="row-fluid">
-            <h1>@Messages("aboutus.header")</h1>
+            <div class="col-xs-12 col-md-8 col-md-offset-2 col-xs-offset-0">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-3">
+                        <h3>Leftmenu header</h3>
+                        <ul>
+                            <li><a href="@routes.FileController.index()">Files</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-12 col-sm-9">
+                        <h1>Om Home Dining Club</h1>
+                        <p>Hej och välkommen till Home Dining Club!</p>
+                        <p>Klubben för dig som älskar mat, älskar att umgås med nya och gamla vänner och som tycker om att utmanas och att utmana din själv. Vi som faciliterar denna klubb är själva mycket intresserade av mat i alla dess former och smaker.</p>
+                        <p>Vi som driver denna klubb har flera av oss både arbetat professionellt men också bloggat och fotat mat under många år. Denna klubb är skapad just i syftet att samla alla landets och kanske världens matintresserade på en och samma plats, där du kan bjuda hem andra och bli hembjuden till nya vänner för att dela era erfarenheter och intressen.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 }
