--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -16,7 +16,7 @@
             <div class="carousel-inner">
                 <div class="item active">
                     @shared.img("images/startpage/startpage-main-image-1.jpg", None, None, "")
-                    <div class="carousel-caption pull-right">
+                    <div class="carousel-caption green-bg right-align animated fadeInRightBig">
                         <h2>Home Dining Club</h2>
                         <p>Vad är det?</p>
                         <p><a class="btn btn-lg btn-primary" href="@routes.UserProfileController.index()" role="button">Bli medlem!</a></p>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="item">
                     @shared.img("images/startpage/startpage-main-image-2.jpg", None, None, "")
-                    <div class="carousel-caption">
+                    <div class="carousel-caption green-bg animated fadeInRightBig">
                         <h2>Slipp Disken</h2>
                         <p>Ät hemma hos någon!</p>
                     </div>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="item">
                     @shared.img("images/startpage/startpage-main-image-4.jpg", None, None, "")
-                    <div class="carousel-caption">
+                    <div class="carousel-caption green-bg left-align animated rotateInDownLeft">
                         <h2>Men kom ut någon gång!</h2>
                         <p>Sitt inte bara där!</p>
                     </div>
