--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -51,6 +51,9 @@ h1{
 h2{
   font-size:20px;
 }
+h3{
+  font-size:16px;
+}
 
 
 // General links
@@ -374,6 +377,19 @@ input[type="reset"]:hover
   margin-top: 15px;
   width:100%;
 }
+
+
+
+
+// Host
+.host-container .host-image
+{
+  position: absolute;
+  right:-10px;
+  top:-10px;
+}
+
+
 
 
 // Responsive
