--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -3,32 +3,34 @@
     <div class="navbar-fixed-top">
         <div class="container-fluid">
             <div class="row-fluid no-gutter header-container">
-                <div class="col-xs-5 col-md-offset-2 col-xs-offset-0 logo">
+                <div class="col-xs-5 col-md-10 col-md-offset-1 col-xs-offset-0 logo">
                     <a href="@routes.StartPageController.index()">@shared.img("images/general/logo-horizontal.png", Some(239), Some(93), Messages("header.logo.alt"))</a>
-                </div>
-                <div class="pull-right visible-xs">
-                    <div class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                        <span class="hidden">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </div>
-                </div>
 
-                <div class="pull-right">
-                    <div class="btn-group">
+                    <div class="pull-right visible-xs">
+                        <div class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+                            <span class="hidden">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </div>
+                    </div>
+
+                    <div class="pull-right">
+                        <div class="btn-group">
                             <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <!-- Login form here -->
-                                here be login
+                                    <!-- Login form here -->
+                                    here be login
                             </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
             <div class="row-fluid header-navigation hidden-xs bs-navbar-collapse">
                 <nav>
-                    <div class="col-xs-12 col-md-8 col-md-offset-2 col-xs-offset-0">
+                    <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
                         <ul class="nav nav-pills collapse navbar-collapse  ">
                             @for(nav <- menuItems) {
                                 <li><a class="@nav._4" href="@nav._3" title="@nav._2">@nav._1</a></li>
