--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,7 @@
 
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/star-rating.min.css")">
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
     </head>
     <body>
@@ -21,6 +22,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+        <script src="@routes.Assets.at("/javascripts/star-rating.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/site.js")"></script>
     </body>
 </html>
