--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -2,7 +2,7 @@
     <div class="container-fluid footer-container">
         <div class="row-fluid">
             <div class="col-md-2 col-md-offset-5 margin-top">
-                © Home Dining Club AB <br><a href="mailto:info@@homediningclub.se" title="Maila till info@@homediningclub.se">info@@homediningclub.se</a>
+                © Home Dining Club AB | <a href="mailto:info@@homediningclub.se" title="Maila till info@@homediningclub.se">info@@homediningclub.se</a>
             </div>
         </div>
     </div>
