--- a/app/views/file/index.scala.html
+++ b/app/views/file/index.scala.html
@@ -13,9 +13,15 @@
             <div class="col-md-offset-3 col-md-6">
             <h2>@Messages("file.filelist.header")</h2>
 
-                <a href="@routes.FileController.listAllFiles">List all files</a><br>
-                @for(file <- fileList) {
-                    <li><a href="#">@file</a></li>
+                <a href="@routes.FileController.listAllFiles("")">List all files raw from S3</a><br>
+                @if(!fileList.isEmpty){
+                    <ul>
+                    @for(fileItem <- fileList) {
+                        @for(item <- fileItem) {
+                                <li><a href="@routes.FileController.listAllFiles(item)">@item</a></li>
+                        }
+                    }
+                    </ul>
                 }
             </div>
         </div>
