--- a/app/views/file/index.scala.html
+++ b/app/views/file/index.scala.html
@@ -11,14 +11,30 @@
 
         <div class="row-fluid">
             <div class="col-md-offset-3 col-md-6">
-            <h2>@Messages("file.filelist.header")</h2>
+                <h2>@Messages("file.filelist.header")</h2>
 
-                <a href="@routes.FileController.listAllFiles("")">List all files raw from S3</a><br>
+                <a href="@routes.FileController.listS3Files("")">List all files raw from S3</a><br>
                 @if(!fileList.isEmpty){
                     <ul>
                     @for(fileItem <- fileList) {
                         @for(item <- fileItem) {
-                                <li><a href="@routes.FileController.listAllFiles(item)">@item</a></li>
+                            <li><a href="@routes.FileController.listS3Files(item)">@item</a></li>
+                        }
+                    }
+                    </ul>
+                }
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-offset-3 col-md-6">
+                <h2>@Messages("file.filelist.header")</h2>
+
+                <a href="@routes.FileController.listAllImages">List all images</a><br>
+                @if(!fileList.isEmpty){
+                    <ul>
+                    @for(fileItem <- fileList) {
+                        @for(item <- fileItem) {
+                            <li><a href="@routes.FileController.listS3Files(item)">@item</a></li>
                         }
                     }
                     </ul>
