--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -51,65 +51,79 @@
         </div>
 
     <div class="container-fluid maincontent-container">
-        <div class="row-fluid">
+        <div class="row-fluid margin-top">
 
             <!-- Main intro -->
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12 col-md-6 col-md-offset-1 col-xs-offset-0">
                 <h1>Hej och välkommen till Home Dining Club!</h1>
                 <p>Bjud hem nya vänner på middag och få betyg och omdömen på din kokkonst. Håll arrangemang för små och stora grupper. Ta betalt eller bjud! Det är upp till dig. Du kanske har den bästa Paellan i hela Stockholm. Varför inte låta folk få komma hem till dig och prova den?</p>
                 <p>Eller så är du bara intresserad av att läsa recept, eller äta hos andra. Upptäcka nya kulinariska höjder och lära känna andra lika matintresserade. Det här är tjänsten för dig!</p>
             </div>
 
-            <!-- Puffs & Right column -->
-            <div class="row-fluid">
-                <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
-                    <div class="row">
-                        <div class="col-xs-12 col-md-8">
+            <!-- News -->
+            <div class="col-xs-12 col-md-5 col-xs-offset-0">
+                <aside>
+                <h2>Nyhetslista</h2>
+                <ul>
+                    <li>Nyhet nr 1 kanske</li>
+                    <li>Nyhet nr 2 kanske</li>
+                    <li>Nyhet nr 3 kanske</li>
+                </ul>
+                </aside>
+            </div>
+        </div>
 
-                                <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                    <div class="body">
-                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        <a href="#" class="btn-primary">Go to profile</a>
-                                    </div>
+
+        <!-- Puffs & Right column -->
+        <div class="row-fluid">
+            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+                <div class="row big-margin-top">
+                    <div class="col-xs-12 col-md-8">
+
+                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                                <div class="body">
+                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
+                                    <h2>Host name</h2>
+                                    <hr>
+                                    <p class="location">Location</p>
+                                    <a href="#" class="btn-primary">Go to profile</a>
                                 </div>
-                                <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
-                                    <div class="body">
-                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        <a href="#" class="btn-primary">Go to profile</a>
-                                    </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
+                                <div class="body">
+                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
+                                    <h2>Host name</h2>
+                                    <hr>
+                                    <p class="location">Location</p>
+                                    <a href="#" class="btn-primary">Go to profile</a>
                                 </div>
-                                <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
-                                    <div class="body">
-                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        <a href="#" class="btn-primary">Go to profile</a>
-                                    </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
+                                <div class="body">
+                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
+                                    <h2>Host name</h2>
+                                    <hr>
+                                    <p class="location">Location</p>
+                                    <a href="#" class="btn-primary">Go to profile</a>
                                 </div>
-                                <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
-                                    <div class="body">
-                                        @shared.img("images/startpage/host-head-default.jpg", None, None, cssClass="img-circle host-image")
-                                        <h2>Host name</h2>
-                                        <hr>
-                                        <p class="location">Location</p>
-                                        <a href="#" class="btn-primary">Go to profile</a>
-                                    </div>
+                            </div>
+                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                                <div class="body">
+                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
+                                    <h2>Host name</h2>
+                                    <hr>
+                                    <p class="location">Location</p>
+                                    <a href="#" class="btn-primary">Go to profile</a>
                                 </div>
-                        </div>
-                        <div class="col-xs-12 col-md-2">
-                            <h2>Funktioner</h2>
-                        </div>
+                            </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2">
+                        <h2>Funktioner</h2>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 
 }
