Footer is now in messages file Finally a proper fix for the email-sending typo in config Some small fixes in how form looks

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -111,7 +111,8 @@ img
 // Forms
 input[type="text"],
 input[type="file"],
-input[type="email"]
+input[type="email"],
+input[type="password"]
 {
   padding:5px 10px 5px 10px;
   margin-bottom:1em;
@@ -127,6 +128,9 @@ label{
   color: @label-color;
 }
 
+.help-block{
+  display: inline-block;
+}
 
 // Buttons
 .btn-primary,
