--- a/app/views/footer/footer.scala.html
+++ b/app/views/footer/footer.scala.html
@@ -1,8 +1,8 @@
 <footer>
     <div class="container-fluid footer-container">
         <div class="row-fluid">
-            <div class="col-md-2 col-md-offset-5 margin-top">
-                © Home Dining Club AB | <a href="mailto:info@@homediningclub.se" title="Maila till info@@homediningclub.se">info@@homediningclub.se</a>
+            <div class="col-md-4 col-md-offset-5 margin-top">
+                @Messages("footer.text") | <a href="@Messages("footer.link.mail.href")" title="@Messages("footer.link.mail.title")" target="_blank">@Messages("footer.link.mail.text")</a>
             </div>
         </div>
     </div>
