--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -17,8 +17,8 @@
 
                     <div class="pull-right quicklinks">
                         <ul class="nav nav-pills">
-                            <li><a href="@routes.AboutUsController.index()">About us</a></li>
-                            <li><a href="#">Messages <span class="badge">42</span></a></li>
+                            <li><a href="@routes.HostController.index()">@Messages("header.link.host-profile")</a></li>
+                            <li><a href="#">@Messages("header.link.inbox") <span class="badge">42</span></a></li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                                     Sign In <span class="caret"></span>
