--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -18,10 +18,11 @@
         @content
         @if(footerVisible){ @footer.footer() }
 
-        @*TODO - Create controllers with local backups *@
+        @*TODO - Create controllers with local backups, also bundle *@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.gray.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/star-rating.min.js")"></script>
         <script src="@routes.Assets.at("javascripts/site.js")"></script>
     </body>
