--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -2,53 +2,53 @@
 
 @main(Messages("startpage.title")) {
 
-        <div id="carousel-startpage" class="carousel slide" data-ride="carousel" data-interval="4000">
+    <div id="carousel-startpage" class="carousel slide" data-ride="carousel" data-interval="4000">
 
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-startpage" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-startpage" data-slide-to="1"></li>
-                <li data-target="#carousel-startpage" data-slide-to="2"></li>
-                <li data-target="#carousel-startpage" data-slide-to="3"></li>
-            </ol>
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-startpage" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-startpage" data-slide-to="1"></li>
+            <li data-target="#carousel-startpage" data-slide-to="2"></li>
+            <li data-target="#carousel-startpage" data-slide-to="3"></li>
+        </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    @shared.img("images/startpage/startpage-main-image-1.jpg", None, None, "")
-                    <div class="carousel-caption green-bg right-align animated fadeInRightBig">
-                        <h2>Home Dining Club</h2>
-                        <p>Vad är det?</p>
-                        <p><a class="btn btn-lg btn-primary" href="@routes.UserProfileController.index()" role="button">Bli medlem!</a></p>
-                    </div>
-                </div>
-                <div class="item">
-                    @shared.img("images/startpage/startpage-main-image-2.jpg", None, None, "")
-                    <div class="carousel-caption green-bg animated fadeInRightBig">
-                        <h2>Slipp Disken</h2>
-                        <p>Ät hemma hos någon!</p>
-                    </div>
-                </div>
-                <div class="item">
-                    @shared.img("images/startpage/startpage-main-image-3.jpg", None, None, "")
-                </div>
-                <div class="item">
-                    @shared.img("images/startpage/startpage-main-image-4.jpg", None, None, "")
-                    <div class="carousel-caption green-bg left-align animated rotateInDownLeft">
-                        <h2>Men kom ut någon gång!</h2>
-                        <p>Sitt inte bara där!</p>
-                    </div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                @shared.img("images/startpage/startpage-main-image-1.jpg", None, None, "")
+                <div class="carousel-caption green-bg right-align animated fadeInRightBig">
+                    <h2>Home Dining Club</h2>
+                    <p>Vad är det?</p>
+                    <p><a class="btn btn-lg btn-primary" href="@routes.UserProfileController.index()" role="button">Bli medlem!</a></p>
                 </div>
             </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-startpage" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="right carousel-control" href="#carousel-startpage" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
+            <div class="item">
+                @shared.img("images/startpage/startpage-main-image-2.jpg", None, None, "")
+                <div class="carousel-caption green-bg animated fadeInRightBig">
+                    <h2>Slipp Disken</h2>
+                    <p>Ät hemma hos någon!</p>
+                </div>
+            </div>
+            <div class="item">
+                @shared.img("images/startpage/startpage-main-image-3.jpg", None, None, "")
+            </div>
+            <div class="item">
+                @shared.img("images/startpage/startpage-main-image-4.jpg", None, None, "")
+                <div class="carousel-caption green-bg left-align animated rotateInDownLeft">
+                    <h2>Men kom ut någon gång!</h2>
+                    <p>Sitt inte bara där!</p>
+                </div>
+            </div>
         </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-startpage" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-startpage" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
 
     <div class="container-fluid maincontent-container">
         <div class="row-fluid margin-top">
@@ -79,43 +79,56 @@
             <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
                 <div class="row big-margin-top">
                     <div class="col-xs-12 col-md-8">
-
-                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                        <div class="row center-block">
+                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
                                 <div class="body">
-                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
-                                    <h2>Host name</h2>
-                                    <hr>
-                                    <p class="location">Location</p>
-                                    <a href="#" class="btn-primary">Go to profile</a>
+                                    <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("images/startpage/host-head-medium.jpg")')"></div>
+                                    <a href="#">
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        @shared.grade(inputId = "host-grade", initialValue = 1, disabled = true, size = "xxs")
+                                    </a>
+                                    <div class="host-level-icon level-guest01"><span>@Messages("level.guest01.header")</span></div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
+                            <div class="col-md-4  col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box2.png")')">
                                 <div class="body">
-                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
-                                    <h2>Host name</h2>
-                                    <hr>
-                                    <p class="location">Location</p>
-                                    <a href="#" class="btn-primary">Go to profile</a>
+                                    <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("images/startpage/host-head-medium.jpg")')"></div>
+                                    <a href="#">
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        @shared.grade(inputId = "host-grade", initialValue = 5, disabled = true, size = "xxs")
+                                     </a>
+                                    <div class="host-level-icon level-guest02"><span>@Messages("level.guest02.header")</span></div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
+                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box3.png")')">
                                 <div class="body">
-                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
-                                    <h2>Host name</h2>
-                                    <hr>
-                                    <p class="location">Location</p>
-                                    <a href="#" class="btn-primary">Go to profile</a>
+                                    <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("images/startpage/host-head-medium.jpg")')"></div>
+                                    <a href="#">
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        @shared.grade(inputId = "host-grade", initialValue = 6, disabled = true, size = "xxs")
+                                    </a>
+                                    <div class="host-level-icon level-guest03"><span>@Messages("level.guest03.header")</span></div>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
+                            <div class="col-md-4 col-sm-6 col-xs-12 thumbnail panel-startpage" style="background-image: url('@routes.Assets.at("images/startpage/Box1.png")')">
                                 <div class="body">
-                                    @shared.img("images/startpage/host-head-small-default.jpg", None, None, cssClass="img-circle host-image")
-                                    <h2>Host name</h2>
-                                    <hr>
-                                    <p class="location">Location</p>
-                                    <a href="#" class="btn-primary">Go to profile</a>
+                                    <div class="img-circle grayscale grayscale-fade host-image" style="background-image:url('@routes.Assets.at("images/startpage/host-head-medium.jpg")')"></div>
+                                    <a href="#">
+                                        <h2>Host name</h2>
+                                        <hr>
+                                        <p class="location">Location</p>
+                                        @shared.grade(inputId = "host-grade", initialValue = 10, disabled = true, size = "xxs")
+                                    </a>
+                                    <div class="host-level-icon level-host01"><span>@Messages("level.host01.header")</span></div>
                                 </div>
                             </div>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-md-2">
                         <h2>Funktioner</h2>
@@ -123,7 +136,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 }
