--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -120,19 +120,6 @@ img
   margin-bottom:20px;
 }
 
-// General image filters
-//img.grayscale
-//{
-//  -webkit-filter: grayscale(100%);
-//  filter: grayscale(100%);
-//  filter: gray;
-//  filter: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' height='0'><filter id='greyscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0' /></filter></svg>#greyscale");
-//}
-//img.grayscale.disabled {
-//  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
-//  -webkit-filter: grayscale(0%);
-//}
-
 // Forms
 input[type="text"],
 input[type="file"],
@@ -360,12 +347,33 @@ input[type="reset"]:hover
 {
   min-height: 200px;
   max-height: 350px;
+  background-color: #fff;
+}
+.carousel-inner .item .shadow
+{
+  display:block;
+  position:relative
+}
+.carousel-inner .item .shadow:before
+{
+  display:block;
+  content:'';
+  position:absolute;
+  width:100%;
+  height:100%;
+  -moz-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
+  -webkit-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
+  box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,1);
 }
 .carousel-inner .item img
 {
-  min-width: 960px;
-  min-height: 283px;
+  min-width:960px;
+  min-height:283px;
   width:100%;
+  margin:auto;
+  max-width:1155px;
+  max-height:320px;
+  //box-shadow: inset 0px 30px 40px rgba(100,100,100,.1);
 }
 
 .carousel-control.right,
@@ -392,11 +400,17 @@ input[type="reset"]:hover
 {
   background-color: rgba(@hdc-green-r,@hdc-green-g,@hdc-green-b,0.5);
   border: 1px solid white;
+  border-radius: 2px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 }
 .carousel-caption {
   padding-top: 15px;
   padding-bottom: 15px;
   bottom:35px;
+}
+.carousel-caption h2
+{
+  font-size:25px;
 }
 .carousel-caption.right-align
 {
