--- a/app/views/host/index.scala.html
+++ b/app/views/host/index.scala.html
@@ -1,4 +1,4 @@
-@(menuItems: Seq[(String, String, Call, String)])
+@(menuItems: Seq[(String, String, String, String)], tab1: String, tab2: String, tab3: String, tab4: String)
 
 @main(Messages("host.title")) {
 
@@ -31,14 +31,30 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 col-md-11">
+                    <div class="col-xs-12 col-md-11 big-margin-top">
                         <nav>
                             <ul class="nav nav-tabs">
                             @for(nav <- menuItems) {
-                                <li><a class="@nav._4" href="@nav._3" title="@nav._2">@nav._1</a></li>
+                                <li class="@nav._4"><a data-toggle="tab" href="#@nav._3" title="@nav._2">@nav._1</a></li>
                             }
                             </ul>
                         </nav>
+
+                        <div class="tab-content">
+                            <div class="tab-pane fade in active" id="@tab1">
+                                Tab1
+                            </div>
+                            <div class="tab-pane fade" id="@tab2">
+                                Tab2
+                            </div>
+                            <div class="tab-pane fade" id="@tab3">
+                                Tab3
+                            </div>
+                            <div class="tab-pane fade" id="@tab4">
+                                Tab4
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
